Adds api structure for category and swagger api
this commit create basic api structure for category
and swagger api using goa by following instructions

```

goa gen github.com/tektoncd/hub/api/design
goa example github.com/tektoncd/hub/api/design

```

category api returns category list with their tags
swagger api provides documentation for apis
